# kio

./: .dockerignore  .env.example  .gitignore  README.md  Taskfile.yaml
docker/: .env.example  Dockerfile.api  Dockerfile.ui  docker-compose.yml
docs/: index.md  kio-2-changes.md  production.md
src/api/: .env.example  alembic.ini  pyproject.toml
src/api/alembic/: env.py
src/api/alembic/versions/: 0001_initial.py  0002_node_tokens.py  0003_kiosk_features.py  0004_kiosk_device_info.py  0005_browser_flags.py  0006_current_input.py  0007_display_on.py  0008_playlists.py  0009_playlist_item_title.py  0010_command_logs.py  0011_event_log_v2.py  0012_agent_version.py  0013_node_meta.py  0014_last_boot_id.py  0015_kiosk_playlist_fk.py  0016_browser_tabs.py  0017_hardware_detect_log.py  0018_feature_flags.py  0019_kiosk_playlist_state.py  0020_playlist_refresh_interval.py  0021_command_log_subject.py  0022_app_settings.py  0023_node_offline_threshold_setting.py  0024_saved_urls.py  0025_api_keys.py  0026_api_keys_add_fields.py  0027_certificates.py  0028_kiosk_reporting_api_url.py  0029_kiosk_uptime.py  0030_drop_browser_management_flag.py  0031_kiosk_tab_cycle_state.py  0032_agent_update_log.py
src/api/app/: auth.py  config.py  database.py  deps.py  main.py  mqtt.py  version.py
src/api/app/models/: agent_update_log.py  api_key.py  app_setting.py  certificate.py  command_log.py  feature_flag.py  hardware_detect_log.py  kiosk.py  node_meta.py  node_token.py  playlist.py  saved_url.py
src/api/app/routers/: agent.py  agent_settings.py  api_keys.py  auth.py  certificates.py  event_logs.py  feature_flags.py  kiosks.py  managed_api_keys.py  node_settings.py  playlists.py  saved_urls.py  sse.py  tokens.py
src/api/app/schemas/: api_key.py  certificate.py  kiosk.py  node_token.py  playlist.py  saved_url.py
src/api/app/services/: kiosk_service.py  settings_service.py
src/api/tests/: conftest.py  test_agent_router.py  test_agent_settings.py  test_auth.py  test_event_logs_router.py  test_kiosk_service.py  test_kiosks_router.py  test_managed_api_keys.py  test_playlists_router.py  test_saved_urls_router.py
src/pi-agent/: README.md  agent.py  kio-agent.service  pyproject.toml  requirements.txt  setup.sh
src/pi-agent/kio_agent/: __init__.py  agent.py  cdp.py  commands.py  config.py  constants.py  display.py  hardware.py  main.py  playlist.py  reporting.py  runtime.py
src/pi-agent/scripts/: browser-kill  browser-start  browser-tabs  browser-url  force-hdmi  kio-agent  self-update  set-resolution  update-certs  update-hosts
tests/pi-agent/: conftest.py  pyproject.toml  test_commands.py  test_comms_state.py  test_config.py  test_playlist.py  test_url_safety.py
(+235 files in other folders)
